style.css
:root {
    --numpad-size: 82px;
    --numpad-gap: 8px;
    --cblue-main: #000;
    --cgreen-main: #9BDF46;
    --cgreen-second: #25A55F;
    --caccent: #ff5a5a;
    --cgreen-bar: var(--caccent);
    --width-fit: 601px;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Inter', sans-serif;
}

body {
    display: flex;
    flex-direction: column;
    height: 100vh;
    max-height: 100vh;
    overflow: hidden;
}

.fit {
    min-width: var(--width-fit);
    margin: 0 auto;
}

.topbar-container {
    background-color: var(--cgreen-main);
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
}

#progress-bar{
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 0%;
    background-color: var(--cgreen-bar);
    z-index: 0;
    transition: width 0.33s ease;
}

.topbar {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 6px 0;
    z-index: 1;
}

.topbar-logo {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 10px;
    font-size: 16px;
    font-weight: bold;
    color: var(--cblue-main);
}

.topbar-menu {
    display: flex;
    gap: 11px;
}

.topbar img {
    width: 30px;
    height: 30px;
}

.topbar-menu div {
    height: 12px;
}

.has-popup:hover {
    position: relative;
    cursor: pointer;
}

.has-popup:hover .popup-content {
    opacity: 0;
}

.popup-content {
    position: absolute;
    top: 50%; 
    left: 100%;
    transform: translateY(-50%);
    background-color: #fff;
    color: var(--cblue-main);
    padding: 7px 10px;
    display: inline-flex;
    padding: 6px 0;
    border-radius: 4px;
    width: 250px;
    opacity: 0;
    z-index: 9;
    font-size: smaller;
}

.info-container {
    position: relative;
}

.level-bar-container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    font-weight: bold;
    color: #1f2d2c;
    gap: 8px;
}

.bar-container {
    display: flex;
    flex-direction: row;
    position: relative;
    align-items: center;
    gap: 5px;
}

.level-line {
    position: absolute;
    z-index: -1;
    height: 2px;
    background-color: #afafaf;
    width: 100%;
}

.level-bar-dots {
    height: 12px;
    width: 12px;
    border-radius: 50%;
    border: 2px solid #afafaf;
    background-color: #fff;
    display: flex;
}

.level-bar-dots.filled{
    border-color: #000 !important;
    background-color: #000 !important;
}

.level-container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin: 16px 0;
}

.progress-container {
    margin: 20px 0;
}

.p-dots {
    height: 8px;
    width: 8px;
    border-radius: 50%;
    background-color: #afafaf;
    display: flex;
}

.p-dots.filled {
    background-color: #000 !important;
}

.progress-bar {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

#notify-container{
    position: absolute;
    bottom: -26px;
    left: 50%;
    transform: translateX(-50%);
    justify-content: center;
    align-items: center;
    padding: 12px 14px;
    background-color: #fff;
    color: var(var(--cblue-main));
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    border-radius: 11px;
    font-weight: 600;
    display: none;
    text-align: center;
    z-index: 999;
}

#notify-container.show{
    display: flex !important;
}

#notify-container.success{
    background-color: var(--caccent) !important;
    color: #063000 !important;
}

#score-container{
    display: flex;
    flex-direction: column;
    position: absolute;
    left: 50%;
    transform: translate(-50%, 200%);
    padding: 15px 32px;
    padding-top: 25px;
    background-color: #fff;
    color: var(var(--cblue-main));
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    border-radius: 11px;
    font-weight: 600;
    z-index: 999;
    height: 70vh;
    width: 80%;
    text-align: start;
    transition: transform 0.238s ease;
}

#score-container.show{
    transform: translate(-50%, -5%);
}

#score-container span{
    font-weight: 400;
    font-size: 11px;
    color: #667579;
}

.score-footer{
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-top: auto;
}

.score-subtitle{
    margin-top: 6px;
    line-height: 0.8;
}

#record-content{
    margin-top: 18px;
    display: flex;
    flex-direction: column;
    gap: 7px;
}

.record-item{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    border: dashed 1px #719EBD;
    padding: 16px 18px;
    border-radius: 12px;
}

.record-item h2{
    display: inline;
    font-weight: 600;
    font-size: 20px;
}

.record-item-point{
    display: flex;
    align-items: center;
    font-size: 20px;
}

.record-item-point i{
    margin-right: 6px;
    font-size: 14px;
}

.record-item-word{
    font-size: 11px;
    color: #677478;
    margin-top: 6px;
}

.worded{
    color: #292929 !important;
}

.record-item-detail{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-end;
}

.numpad-item-container{
    display: flex;
    gap: 5px;
}

.numpad-item{
    border-radius: 4px;
    background-color: #C4C4C4;
    font-size: 11px;
    height: 19px;
    width: 19px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.numpad-item.main{
    background-color: var(--cgreen-main) !important;
}

.main-container {
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 12px;
    margin-bottom: 7%;
}

#score-close{
    font-size: 11px;
    background-color: #D9D9D9;
    border-radius: 12px;
    width: 75px;
    height: 25px;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}

.word-container {
    background-color: #E6EAEF;
    padding: 15px 17px;
    width: 100%;
    border-radius: 12px;
    color: var(--cblue-main);
    font-weight: 450;
    max-width: var(--width-fit);
    position: relative;
}

.the-end{
    width: 15px;
    height: 100%;
    border-radius: 12px;
    position: absolute;
    right: 0;
    top: 0;
    background-color: #E6EAEF;
}

.max-min-btn{
    position: absolute;
    width: 36px;
    height: 8px;
    border-bottom-left-radius: 14px;
    border-bottom-right-radius: 14px;
    background-color: #E6EAEF;
    color: #fff;
    cursor: pointer;
    right: 50%;
    bottom: -8px;
    padding-bottom: 4px;
    transform: translate(50%, -0%);
    font-size: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
}

#the-maximum{
    z-index: 6;
}

#the-maximum-reverse{
    color: #000;
}

.max-min-btn.full{
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

.word-content-container{
    width: 100%;
    background-color: #E6EAEF;
    display: flex;
}

#full-word-container{
    height: 100%;
    flex-direction: column;
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
    padding-bottom: 12px;
    border-radius: 12px;
    transform-origin: top;
    transition: transform 0.25s ease, z-index 0.18s ease;
    transform: scaleY(0);
}

#full-word-container.full{
    z-index: 66;
    height: 420%;
    transform: scaleY(1);
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

#full-word-container.full .max-min-btn.minimize{
    z-index: 66;
}

.word-full{
    padding: 4px 8px;
    border-radius: 8px;
    background-color: var(--cgreen-main);
}

.full-word-tittle{
    display: flex;
    padding: 12px 17px;
    gap: 6px;
    align-items: center;
    color: #1f2d2c;
    border-bottom: dashed 2px #767474;
}

.full-word-tittle i{
    font-size: 13px;
}

#full-word-content{
    display: flex;
    flex-wrap: wrap;
    padding: 12px 17px;
    gap: 6px;
    align-items: center;
    color: #1f2d2c;
    overflow-y: scroll;
    margin-top: 9px;
}

#word-content{
    gap: 4px;
    flex-direction: row;
}

.blinking-cursor {
    display: inline-block;
    width: 6px;
    height: calc(2rem - 4px);
    background-color: black;
    animation: blink 1s step-start infinite;
}

@keyframes blink {
    0% {
        opacity: 1;
    }

    50% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

.main-content {
    height: 100%;
    display: flex;
    flex-direction: column;
    width: calc(var(--numpad-size) * 3 + var(--numpad-gap) * 2);
    margin: auto auto;
    justify-content: space-evenly;
}

.keyboard-container {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 3px;
    height: 2rem;
}

#entered-word {
    text-align: center;
    font-size: 2rem;
    font-weight: 700;
    color: var(--cblue-main);
}

.numpad-container {
    display: flex;
    flex-direction: column;
    gap: var(--numpad-gap);
}

.numpad-column {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.numpad {
    cursor: pointer;
    font-size: 1.5rem;
    display: flex;
    height: var(--numpad-size);
    width: var(--numpad-size);
    background-color: #E6EAEF;
    border-radius: 12px;
    align-items: center;
    justify-content: center;
    font-weight: 750;
    color: var(--cblue-main);
    user-select: none;
}

.numpad.main {
    background-color: var(--cgreen-main);
}

.numpad.control {
    color: #000;
}

#submit-btn {
    width: calc(var(--numpad-size) * 2 + var(--numpad-gap));
    background-color: var(--cblue-main);
    color: #fff;
}

/* .numpad:hover{
    background-color: #D1DAE5;
}

.numpad.main:hover{
    background-color: #7DCF16;
} */

.footer-container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 11px;
    color: #6d94a0;
    text-align: center;
    padding-bottom: 15px;
    width: var(--width-fit);
}

.footer-content {
    padding: 13px;
    border-radius: 12px;
    background-color: #E6EAEF;
}

